--- a/src/html/p/how-I-develop-websites-in-php/index.html
+++ b/src/html/p/how-I-develop-websites-in-php/index.html
@@ -13,20 +13,148 @@
     <main class="container post--font-size main--post">
 
         <div class="container--post post--start-1">
-            <h1>Путь программиста — это трудный путь?</h1>
-            <p class="post--start-p">Постараемся разобраться в сегодняшней статье.</p>
+            <h1>Как я разрабатываю сайты на PHP</h1>
+            <p class="post--start-p">Небольшой гайд.</p>
         </div>
 
         <figure class="post--start-img text-center">
-            <img src="/img/posts/p001.jpg" class="img-fluid" alt="Фотография ноутбука с открытым браузером">
-            <figcaption class="img--desc">Фотография ноутбука с открытым браузером</figcaption>
+            <img src="/img/posts/p006.jpg" class="img-fluid" alt="Открытый код программы">
+            <figcaption class="img--desc">Открытый код программы</figcaption>
         </figure>
 
         <div class="container--post">
             <p>
-                Вопрос, поставленный в заголовке кому-то может показаться скорее риторическим, чем правда требующим ответа. Но скорей
-                вопрос несет в себе не смысл ответа «Да» или «Нет», а более глубокое изучение вопроса трудности деятельности
-                программиста.
+                За 3 года активной разработки проектов в web-среде для личного пользования и людям на заказ я вывел некоторую форму
+                удобной сортировки проекта. Решил рассказать об этом людям, так как скоро буду менять стиль разработки.
+            </p>
+            <h3>Структурирование проекта</h3>
+            <p>
+                Прежде всего стоит разобраться со структурой проекта. Какое-то время я использовал длинные названия, понятные, но из-за
+                них URL может удлиниться. Теперь мне больше по душе непонятные папки в духе «a», «f», «db» и прочее.
+            </p>
+            <p>
+                В корне я храню .htaccess, в котором описал ссылку на страницу 404, 403 и правила, которые убирают расширение .php из
+                URL.
+            </p>
+            <p>
+                Также в корне храню папку «i» - тут все дополнительное для сайта: шрифты, стили, скрипты и изображения. В папке «i»
+                расположены 4 папки: «a», «css», «img», «php».
+            </p>
+            <p>
+                Начнем с конца. Папка «php» имеет внутри себя 2 папки: «c» и «m». Папка «c» сокращение от слова component - тут хранятся
+                части сайта: footer, header, head и прочие описанные заранее стили. Я выношу блоки в модули, как это происходит в
+                ReactJS из-за удобства использования.
+            </p>
+            <p>
+                Папка «m» сокращение от слова module - тут хранятся обработчики событий. Например, тут я храню скрипт rb-mysql.php,
+                позволяющий удобно обращаться к базе данных и обработчики, к которым ссылаюсь в формах или ссылках.
+            </p>
+            <p>
+                Папка «img» хранит картинки. Тут все просто, папка «logo» для логотипов и другие нужные папки, разбитые по категориям
+                сайта.
+            </p>
+            <p>
+                Папка «css» хранит CSS стили моего сайта. В корне я храню файл app.css, в котором подключаю другие CSS-файлы с помощью
+                @import. Такой вариант позволяет мне полноценно работать в 1 папке, созданной для CSS стилей и не менять структуру
+                проекта в других его частях, тем самым усложняя.
+            </p>
+            <p>
+                Удобно хранения стилей в одной папке обосновывается также и использованием такого варианта для смены темы. Вместе с
+                файлом app.css в корне папки «css» располагаются 2 файла: light.css, dark.css. В двух данных файлах описаны цвета,
+                которые я использую в проекте. В зависимости от текущей темы я подключаю нужный файл, который, в случае чего, сменит
+                цвета на сайте. Таким образом происходит смена темы на сайте.
+            </p>
+            <p>
+                И самое интересное - папка «a» - сокращение от слова another. Чаще всего здесь я храню весь «мусор», без которого нельзя обойтись. Я редко меняю файлы и папки, хранящиеся в папке «a». Именно поэтому я вынес данные файлы и папки в папку «a». К примеру, в папке «a» я храню стили Bootstrap, шрифты, JavaScript-код и сохранения с базы данных. В случае чего можно расширить количество хранимых здесь файлов и интегрировать иные решения, нужные для проекта.
+            </p>
+            <h3>Вспомогательные файлы, нужные для качественного сайта</h3>
+            <p>
+                Но просто папками и файлами PHP обойтись не получится. Да, можно создать отличный, оптимизированных с хорошей
+                доступностью сайт. Но помимо наличия файлов страниц, нужны также вспомогательные файлы, описывающие сайт. Данные файлы
+                обычный человек читать не будет, ему они не интересы. Данные файлы нужны для роботов-поисковиков, которые будут
+                проверять Ваш сайт и проходиться по нему.
+            </p>
+            <p>
+                Первый разобранный выше файл - это .htaccess. Нужен для того, чтобы, к примеру, изменить формат отображения URL-адреса.
+                Также .htaccess позволяет совершать и другие действия, с которыми можно ознакомиться в интернете.
+            </p>
+            <p>
+                Файл sitemap.xml содержит в себе «код» в XML-формате. Данный файл хранит в себе все страницы сайта, их приоритет, время
+                последнего изменения страницы и частоту изменения определенной страницы. К примеру, ознакомиться с данным файлом можно
+                по адресу creagoo.ru/sitemap.xml.
+            </p>
+            <p>
+                Также имеется файл robots.txt. В нем хранится информация для роботов-поисковиков. Ссылка на sitemap и на различную
+                информацию для роботов, к примеру какие пути доступны для обхода, а какие нет.
+            </p>
+            <p>
+                Также следует хранить файл icon.ico. Данный файл в строке адреса позволит вывести маленькое изображение-логотип сайта.
+                Чаще всего данный файл нужен для уникальности страницы в выдаче.
+            </p>
+            <p>
+                Не совсем файл, но все же, для добавления дополнительной уникальности страницы можно использовать акцентный цвет.
+                Добавляется стиль в head с названием «theme-color» и в content значение цвета в HTML-формате. Насколько мне известно,
+                браузер Safari считывает данную информацию и отображает в заголовке.
+            </p>
+            <p>
+                Например, для новостного сайта можно использовать файл RSS. В него записывается информация о страницах. Если Вы
+                посмотрите новостные сайты, в footer’е Вы увидите ссылку на RSS-канал. Это файл, хранящий какие-то записи. Часто данный
+                RSS-файл можно подключить для какой-нибудь соц. сети, чтобы она отображала Ваши последние страницы.
+            </p>
+            <h3>«Чистый» PHP или Laravel</h3>
+            <p>
+                Мы разобрали структуру сайта, посмотрели, каким образом следует хранить файлы проекта. Теперь разберемся, какой вариант
+                следует использовать - просто PHP или фреймворк Laravel?
+            </p>
+            <p>
+                Сообщу, что транслируемое мнение - это сугубо мой личный опыт. Если Ваш опыт отличается - это отлично.
+            </p>
+            <p>
+                Создание своего первого сайта я начинал именно с чистого PHP. Понятие «чистый PHP» означает, что используется язык
+                программирования PHP и ничего более. Разработка происходит немного трудновато, потому что отслеживаются зависимости
+                самостоятельно. Нет возможности интегрировать какие-то решения в свой проект.
+            </p>
+            <p>
+                Laravel, вроде бы, решает данные проблемы. Позволяет писать сайты круче. Но, правды ради, я не очень смог понять смысл
+                Laravel’а для использования. Да, в него интегрированы тесты, лично я ими не пользуюсь, мне хватает собственного
+                тестирования из-за малых размеров сайтов.
+            </p>
+            <p>
+                Laravel позволяет разделить ответственность на сайте: backend и frontend. Позволяет включать файлы в свой проект.
+                Создавать многоязычные сайты. Обращаться к базе данных. Решать проблемы быстрее.
+            </p>
+            <p>
+                Но мой опыт использования Laravel ассоциировался только с болью. После каждого дня у меня переставал работать проект. Я
+                начинал с более поздней версии Laravel. Переустановил, но все равно были какие-то проблемы и вечные ошибки, из-за
+                которых мой проект не запускался.
+            </p>
+            <p>
+                Мне совсем не нравилось вечно исправлять проблемы. Вся суть вот в чем: после внедрения нового решения у меня спокойно
+                запускался проект. Но после какого-то времени вместо запуска у меня в консоли выводились ошибки. Работу над проектом я
+                произвожу на рабочей станции, после проекта Laravel я ничего не менял и не удалял.
+            </p>
+            <p>
+                Также и публикация проекта Laravel на сервер невероятно трудна: требуется менять зависимости, файлы. Мне было абсолютно
+                непонятно, каким образом можно удобно загрузить проект на сервер. Отсутствие гостеприимства и оттолкнуло меня от
+                использования Laravel.
+            </p>
+            <h3>Язык программирования для обработки backend-запросов</h3>
+            <p>
+                Я решил выбрать язык программирования PHP для обработки backend-запросов. Выбор сделан из-за очень простой причины:
+                данный язык программирования развивается достаточно долго, имеет внутри себя хорошие технологические решения, упрощающие
+                разработку, для данного языка программирования написано не мало фреймворков, которые можно использовать. Да и в целом,
+                мне нравится данный язык программирования.
+            </p>
+            <p>
+                Фактически, можно использовать любой интересующий Вас язык программирования: Python, C++, Rust. Я не считаю, что это так
+                важно. Только если Вы не создаете ресурс с большими оборотами пользователей или более узкой сферы использования.
+            </p>
+            <p>
+                В заключение я хотел бы выделить преимущества PHP: я использую его для модульности моего проекта, в качестве
+                backend-обработчика. С помощью PHP можно получить возможность управлять GET-запросами и работать с формами.
+            </p>
+            <p>
+                Используйте то, что Вам нравится больше всего и подходит для решения задач. Удачи!
             </p>
         </div>
 
