--- a/src/html/p/how-I-fight-against-burnout/index.html
+++ b/src/html/p/how-I-fight-against-burnout/index.html
@@ -13,20 +13,70 @@
     <main class="container post--font-size main--post">
 
         <div class="container--post post--start-1">
-            <h1>Путь программиста — это трудный путь?</h1>
+            <h1>Как я борюсь против выгорания</h1>
             <p class="post--start-p">Постараемся разобраться в сегодняшней статье.</p>
         </div>
 
         <figure class="post--start-img text-center">
-            <img src="/img/posts/p001.jpg" class="img-fluid" alt="Фотография ноутбука с открытым браузером">
-            <figcaption class="img--desc">Фотография ноутбука с открытым браузером</figcaption>
+            <img src="/img/posts/p005.jpg" class="img-fluid" alt="Девушка выгорела на фото">
+            <figcaption class="img--desc">Девушка выгорела на фото. Источник: Пикабу</figcaption>
         </figure>
 
         <div class="container--post">
             <p>
-                Вопрос, поставленный в заголовке кому-то может показаться скорее риторическим, чем правда требующим ответа. Но скорей
-                вопрос несет в себе не смысл ответа «Да» или «Нет», а более глубокое изучение вопроса трудности деятельности
-                программиста.
+                В сегодняшней статье постараюсь рассказать методики борьбы против выгорания и обсудить тот факт, чем страшно выгорание и
+                из-за чего оно появляется у людей.
+            </p>
+            <p>
+                Чаще всего именно программисты из-за большого количества монотонной работы выгорают от своего дела.
+            </p>
+            <h3>Что такое выгорание</h3>
+            <p>
+                Выгорание — это состояние моральной усталости, из-за которого нет желания чем-либо заниматься. Выгорание — это первая
+                ступень к депрессии. Не стоит недооценивать это состояние, потому что борьба с выгоранием не такая простая, как с
+                физической усталостью.
+            </p>
+            <p>
+                С физической усталостью очень легко бороться: мы просто отдыхаем, отсыпаемся и не напрягаем мышцы, из-за чего они
+                восстанавливаются и мы снова можем начать напрягаться. Но как быть с моральной усталостью? Состояние, когда ты ничем не
+                занимаешься приносит большое количества вреда, потому что от нас может многое чего зависеть и нам просто необходимо
+                решать задачи.
+            </p>
+            <h3>Борьба с выгоранием</h3>
+            <p>
+                Первый и самый важный шаг — это определить, что у вас именно выгорание, а не простая усталость от дела. Как я сказал
+                выше, выгоранием часто болеют программисты, потому что в их задачи входит монотонная работа, которую нужно выполнять.
+            </p>
+            <p>
+                Но это не значит, что если перед вами стоит выполнение монотонной работы — то нужно сидеть и делать только ее. Есть пару
+                советов, чтобы не уставать во время работы и не довести себя до выгорания:
+            </p>
+            <ul>
+                <li>
+                    Не сидите на месте долгое время. Встаньте, походите 5 минут. Смените место. Выпейте воды или сделайте разминку. Ваш мозг
+                    не может все время работать с одинаковой эффективностью, вам точно нужен отдых.
+                </li>
+                <li>
+                    Старайтесь меньше напрягаться во время занятия. Не сгибайте шею в неестественное положение. Пусть размер шрифта на
+                    устройстве будет комфортным. И освещение в комнате также.
+                </li>
+                <li>
+                    Старайтесь чередовать рутинную и новую работу. Бывает очень полезным сесть за дело, в котором вам не нужно много думать.
+                    Во время выполнения такой работы ваш мозг скажет вам спасибо, потому что вы переключите тип работы. Мозг или думает, или
+                    делает что-то однотипное. Не забывайте про это.
+                </li>
+                <li>
+                    И, наверное, самое логичное и понятное: занимайтесь работой в удовольствие. Если в текущее время вам не хочется
+                    заниматься этой работой — отложите ее на некоторое время. Давайте себе время, чтобы отдохнуть. Если вы понимаете, что не
+                    можете сделать работу эффективно — отложите ее на некоторое время, сделаете ее позже.
+                </li>
+            </ul>
+            <p>
+                Да, советы не всегда рабочие, потому что бывают моменты сильного напряжения или безвыходной ситуации — нужно сделать это
+                дело и все. Но такие моменты заканчиваются, и после них вы сможете отдохнуть.
+            </p>
+            <p>
+                Хочу пожелать поменьше выгорать в новом году. И побольше отдыхать. С эффективными результатами бизнеса. До встречи!
             </p>
         </div>
 
