--- a/src/parts/p--main.html
+++ b/src/parts/p--main.html
@@ -22,7 +22,7 @@
             </a>
         </div>
         <div class="col pb-3 mb-sm-0">
-            <a href="/p/how-did-I-start-learning-programming" class="card card--link card--rounded border-0">
+            <a href="/p/how-did-i-start-learning-programming" class="card card--link card--rounded border-0">
                 <img src="/img/posts/p004.jpg" class="card-img" alt="Фотография с кодом программиста">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">С чего я начал изучать программирование</p>
@@ -30,16 +30,16 @@
             </a>
         </div>
         <div class="col pb-3 mb-sm-0">
-            <a href="/p/how-I-fight-against-burnout" class="card card--link card--rounded border-0">
-                <img src="/img/placeholders/p-3.jpg" class="card-img" alt="...">
+            <a href="/p/how-i-fight-against-burnout" class="card card--link card--rounded border-0">
+                <img src="/img/posts/p005.jpg" class="card-img" alt="Девушка выгорела на фотографии">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Как я борюсь против выгорания</p>
                 </div>
             </a>
         </div>
         <div class="col pb-3 mb-sm-0">
-            <a href="/p/how-I-develop-websites-in-php" class="card card--link card--rounded border-0">
-                <img src="/img/placeholders/p-4.jpg" class="card-img" alt="...">
+            <a href="/p/how-i-develop-websites-in-php" class="card card--link card--rounded border-0">
+                <img src="/img/posts/p006.jpg" class="card-img" alt="Открытый код программы">
                 <div class="card-img-overlay card--bg-gradient d-flex">
                     <p class="card-title text-white mt-auto card--title card--title-2">Как я разрабатываю сайты на PHP</p>
                 </div>
