--- a/src/parts/header.html
+++ b/src/parts/header.html
@@ -28,7 +28,7 @@
             </div>
 
             <ul class="nav col-12 col-md-auto fs-5 justify-content-center mb-md-0 header--adaptive-nav">
-                @@if(context.activeItem == "cabinet") {
+                <!-- @@if(context.activeItem == "cabinet") {
                     <li class="mx-2 px-3"><p class="nav-link header--nav-link-active mb-0">Кабинет</p></li>
                 }
                 @@if(context.activeItem != "cabinet") {
@@ -54,7 +54,7 @@
                 }
                 @@if(context.activeItem != "best") {
                     <li class="mx-2 px-3"><a href="/best/" class="nav-link header--nav-link">Лучшее</a></li>
-                }
+                } -->
 
                 @@if(context.activeItem == "posts") {
                     <li class="mx-2 px-3"><p class="nav-link header--nav-link-active mb-0">Статьи</p></li>
@@ -119,7 +119,7 @@
     </div>
     <div class="offcanvas-body">
         <div class="d-flex flex-wrap flex-column">
-            <a href="/best/" aria-label="Открыть лучшие статьи" class="header--mobile-item fs-4">
+            <!-- <a href="/best/" aria-label="Открыть лучшие статьи" class="header--mobile-item fs-4">
                 <span class="d-flex flex-wrap align-items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="me-3"
                         viewBox="0 0 16 16">
@@ -163,7 +163,7 @@
                     </svg>
                     VR
                 </span>
-            </a>
+            </a> -->
             <a href="/articles/" aria-label="Открыть лучшие статьи" class="header--mobile-item fs-4">
                 <span class="d-flex flex-wrap align-items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="me-3"
