--- a/src/html/p/macbook-pro-2014-13-review/index.html
+++ b/src/html/p/macbook-pro-2014-13-review/index.html
@@ -13,20 +13,229 @@
     <main class="container post--font-size main--post">
 
         <div class="container--post post--start-1">
-            <h1>Путь программиста — это трудный путь?</h1>
-            <p class="post--start-p">Постараемся разобраться в сегодняшней статье.</p>
+            <h1>Macbook Pro 2014 13' — обзор</h1>
+            <p class="post--start-p">Мое самое любимое устройство.</p>
         </div>
 
         <figure class="post--start-img text-center">
-            <img src="/img/posts/p001.jpg" class="img-fluid" alt="Фотография ноутбука с открытым браузером">
-            <figcaption class="img--desc">Фотография ноутбука с открытым браузером</figcaption>
+            <img src="/img/posts/p008.jpg" class="img-fluid" alt="Приоткрытая крышка ноутбука">
+            <figcaption class="img--desc">Приоткрытая крышка ноутбука</figcaption>
         </figure>
 
         <div class="container--post">
             <p>
-                Вопрос, поставленный в заголовке кому-то может показаться скорее риторическим, чем правда требующим ответа. Но скорей
-                вопрос несет в себе не смысл ответа «Да» или «Нет», а более глубокое изучение вопроса трудности деятельности
-                программиста.
+                Моя основная занятость — это программирование. Именно поэтому мне нужна мобильность, доступность и удобство устройства,
+                на котором я программирую. Я часто могу слышать про то, что макбук — это отличный девайс для творческих людей и
+                программистов в том числе. Попробуем разобрать, в связи с чем люди делятся подобным мнением.
+            </p>
+            <h3>Как я его покупал</h3>
+            <p>
+                Мою модель уже не получится найти в официальном магазине или на складе в качестве остатков. Я смотрел интернет-площадки,
+                где люди выставляют свои старые товары на продажу. Главный плюс подобных интернет-площадок в том, что можно обзавестись
+                старой техникой. Но минус — на подобных площадках могут обмануть или продать устройство с техническими проблемами.
+                Поэтому следует осторожно подходить к покупке техники на данных рынках или доверить покупку специалисту.
+            </p>
+            <p>
+                У меня получилось найти отличное объявление с рыночной ценой за аппарат. Найти не б/у устройства почти невозможно,
+                потому что прошло слишком много времени с момента покупки. Я купил устройство уже с некоторыми проблемами на дисплее, не
+                влияющие на работу. Также аккумулятор был плохо приклеен и отсутствовало 3 болта сзади на крышке.
+            </p>
+            <h3>Есть макбук, есть устройства на Windows — что же выбрать</h3>
+            <p>
+                Я всегда считал, что ответ на данный вопрос для каждого человека свой. Фактически, так и есть на самом деле, потому что
+                огромное количество людей поддерживают макбуки, а другое количество людей отдают предпочтение Windows.
+            </p>
+            <p>
+                Почему люди спорят в выборе техники? Дело в том, что макбук — более уникальное устройство, чем обычный ноутбук на
+                Windows. Часто получается так, что за более высокую цену в макбуке установлено меньше оперативной памяти, меньше памяти
+                у ssd, меньше диагональ и, казалось бы, меньше производительность в тестах по сравнению с ноутбуком на Windows за ту же
+                цену.
+            </p>
+            <p>
+                Но вот, что я понял на своем опыте — далеко не все люди готовы отдавать большую стоимость за макбук, не понимая, почему
+                он так дорого стоит. Да, цена действительно большая, я бы не хотел разбирать, из чего формируется такая цена, а хотел бы
+                больше времени уделить сравнению со средним ноутбуком на Windows и моим макбуком.
+            </p>
+            <h3>Критика Windows</h3>
+            <p>
+                Сообщу сразу, что говорить, что за модель я не стану, потому что использую свою рабочую станцию на Windows как ПК и
+                характеристики сильно изменены. Здесь мы говорим сугубо о моем опыте использования.
+            </p>
+            <p>
+                Что является правдой: Windows — это очень нестабильная система с отсутствием анимаций и некрасивым интерфейсом. Тот
+                факт, что интерфейс некрасивый подтверждается тем, что уже в Windows 11 он был исправлен.
+            </p>
+            <p>
+                Примерно за 3 года эксплуатации Windows я видел синий экран раз 30-40, это очень много. Появлялся он из-за самых глупых
+                причин, например из-за отсутствия драйверов на какой-то компонент, но синий экран не появлялся, если на экране загрузки
+                подождать 1-2 минуты.
+            </p>
+            <p>
+                Сейчас на моей Windows текущая проблема — отсутствует английский язык. Чтобы английский язык появился, мне нужно
+                добавить 3 язык, после чего мой английский язык появится. Проблема в том, что он не всегда может появиться, а произойдет
+                это только через время. Мне не помогла переустановка Windows, поэтому мне приходится мириться с данной проблемой.
+            </p>
+            <p>
+                Windows очень легко засорить, не описать насколько. Буквально через год активного использования на моем основном диске
+                осталось 15 гб. памяти и мне снова пришлось переустанавливать Windows, а после очищать мой диск.
+            </p>
+            <p>
+                За свою жизнь Windows’сом я пользуюсь более 10-ти лет и желания ее критиковать у меня нет, я просто озвучиваю то, что
+                есть на самом деле. Вот например, в Windows 10 остаются компоненты с Windows XP или еще ранних версий Windows. Та же
+                панель управления начала «пропадать» только в Windows 11, да и то, не до конца.
+            </p>
+            <p>
+                К Windows у меня действительно большое количество вопросов. Во время работы у меня возникает не малое количество
+                неудобств. Да, говорить о том, что Windows ужасная будет некорректно, потому что она в полном объеме позволяет мне
+                производить работу, пользоваться установленным железом и тестировать новые функции.
+            </p>
+            <p>
+                Я не могу в полном объеме отказаться от Windows, иначе сделал бы это уже давно. Но нередко приходится заниматься
+                рутиной: очисткой, удалением, изменением и прочим.
+            </p>
+            <h3>Про macOS</h3>
+            <p>
+                Я не могу озвучить ничего подобного про macOS. Вряд ли все дело в том, что с момента покупки макбука прошло только
+                полгода, потому что я уже успел воспользоваться OpenCore’ром, опробовать свыше 5-ти macOS’ей и остаться максимально
+                довольным в вопросе выбора техники.
+            </p>
+            <p>
+                У меня нет нужны устанавливать различные системы для очистки моей macOS. Мне не нужно переустанавливать ее каждый раз,
+                чтобы она не засорялась. У меня нет вопросов, что моя техника «глупая», потому что мой макбук в полном объеме позволяет
+                мне решать те задачи, которые мне нужны.
+            </p>
+            <p>
+                Пожалуй, главное отличие macOS от Windows в том, что macOS куда продуманнее и умнее. После установки программы macOS
+                сама предлагает удалить установочный файл. В случае установки программы из неизвестного источника macOS будет
+                предупреждать об этом.
+            </p>
+            <p>
+                Каждый мой шаг завязан с разрешением: у программы нет возможности получить доступ к системе без моего разрешение. Любую
+                программу я могу удобно скачать с App Store в два клика. Программы удобно хранятся в папке и я могу получить доступ к
+                приложениям, как, например с моего айфона или айпада.
+            </p>
+            <p>
+                Отличная оптимизация софта. Невероятное качество и удобство использования. После установки zip-архива с браузера macOS
+                сама разархивирует его и мне нужно будет лишь использовать папку. У меня всегда есть возможность закрыть какую-то
+                программу. Из-за ошибки в работе программы macOS не зависнет.
+            </p>
+            <p>
+                У меня однажды случилась проблема: я открыл Safari и не мог его закрыть. Комбинация клавиш не работала, а пункт
+                «Завершить Safari» был недоступен. Мне пришлось выключить систему, после чего макбук предупредил меня об произошедшей
+                ошибки и предложил отправить отчет.
+            </p>
+            <h3>Модель макбука</h3>
+            <p>
+                Мой выбор пал на Macbook Pro 13’ 2014. Не пугайтесь года выпуска, я смело решаю все задачи, связанные с
+                программированием, просмотром контента и прочим и не имею никаких проблем. К слову, установлена операционная система
+                macOS Big Sur 11.7.
+            </p>
+            <p>
+                Я пользовался на этом макбуке macOS Monterey — имеются некоторые проблемы, потому что операционная система официально не
+                поддерживается. У меня выдавалась ошибка, связанная с хэшем основного диска и я решил отказаться от использования
+                официально неподдерживаемой macOS. Тем более, что есть официально поддерживаемая macOS Big Sur, между данными
+                операционными системами отличия минимальны и меня полностью все устраивает.
+            </p>
+            <h3>Плюсы макбука</h3>
+            <p>
+                <i>Дисплей</i> макбука невероятен. Технология Retina удваивает количество пикселей дисплея, из-за чего Вы не увидите здесь
+                пиксели. Отличная калибровка дисплея позволит получать удовольствие от цветов, которые максимально приближены к
+                настоящим цветам из жизни.
+            </p>
+            <p>
+                <i>Клавиатура</i> оставляет лишь приятные впечатления. Если выбрать модель до 16 года, у Вас клавиатура будет иного формата, с
+                большим ходом клавиш. Именно такая клавиатура мне нравится куда больше, потому что я привык к низкому ходу клавиш. После
+                16 года в макбуках устанавливались клавиатура-бабочка, которая подвержена залипаниям и имеет более низкий ход клавиш.
+            </p>
+            <p>
+                С <i>аккумулятором</i> у меня не возникало проблем. Устройством комфортно пользоваться и решать задачи, не обязательно
+                подключая макбук к источнику питания.
+            </p>
+            <p>
+                Прекрасная <i>macOS</i>, о которой я говорил много хорошего уже выше.
+            </p>
+            <p>
+                Отличная оптимизация <i>программ</i>, которые в полном объеме позволят получать комфорт: монтировать, программировать, писать
+                текста, заниматься графикой и прочим.
+            </p>
+            <p>
+                Невероятная интеграция с <i>экосистемой Apple</i>, что позволяет мне соединить мои устройства в единую коммуникацию,
+                обмениваться данными, использовать бесшовную отправку материалов и не испытывать никакого дискомфорта в вопросе отправки
+                данных.
+            </p>
+            <h3>Проблемы данного макбука</h3>
+            <p>
+                Как и было сказано выше — данный макбук уже 8 лет на рынке и купить абсолютно новый девайс не представляется возможным,
+                с огромной вероятностью Вы купите когда-то использованное устройство, так называемое б/у.
+            </p>
+            <p>
+                На моем устройстве была плохо приклеена батарея к корпусу, поэтому она болталась. Исправил данный момент очень просто —
+                я купил двухсторонний скотч и хорошо приклеил батарею к корпусу, чтобы она больше не шаталась в корпусе.
+            </p>
+            <p>
+                Я заменил термопасту на ноутбуке для лучшей производительности и меньшего нагрева.
+            </p>
+            <p>
+                Также сзади на крышке отсутствовало 3 болта. Я заказал в магазине болты под свою модель ноутбука и успешно заменил их.
+                Будьте внимательны, чтобы Вы заказали именно на свою модель ноутбука болты. Учтите, что некоторые болты крепятся под
+                наклоном к крышке. И еще, 2 болта будут более маленького размера — два этих болта нужно закрепить в той стороне, где
+                находится отверстие охлаждения.
+            </p>
+            <p>
+                Все это было именно на моем устройстве, при покупке Вы можете осмотреть девайс и выбрать себе устройство с меньшим
+                количеством дефектов. К слову, еще у меня есть желание заказать ножки для ноутбука и их тоже заменить.
+            </p>
+            <p>
+                И теперь про саму модель: с момента производства данного устройства прошло много времени, из-за чего аккумулятор потерял
+                большое количество своей емкости и его стоит заменить.
+            </p>
+            <p>
+                Самый страшный дефект, который имеется на данной модели — дисплей. И дело не в его качестве, нет, качество невероятное.
+                А слой, которым покрыт данный дисплей. Дисплей на данном ноутбуке ни в коем случае нельзя мочить. На него не должны
+                попадать капли воды или любой другой жидкости.
+            </p>
+            <p>
+                На свой макбук я решил поклеить пленку на дисплей, чтобы избежать прямого попадания каплей воды или любой другой
+                жидкости. Если на данный дисплей попадет жидкость — дисплей начнет пузыриться и производить разводы, которые нельзя
+                убрать. Поэтому Вам тоже порекомендую поклеить пленку. Она не искажает цвета и не мешает его работе.
+            </p>
+            <p>
+                Единственное, что я бы выделил — диагональ в 13 дюймов маловата для основном рабочей станции и в этом я убедился на
+                практике. Макбук невероятно удобен и комфортен. Я не могу расстаться с ним ни на минуту, но иногда возникает желание
+                уменьшить масштабирование интерфейса или выполнить иные операции для увеличения количества контента на мониторе.
+            </p>
+            <p>
+                Решаю вопрос с диагональю с помощью подключения внешнего монитора, на котором и произвожу операции, связанные с кодом.
+                Именно поэтому я в полном объеме остаюсь довольным и не хочу ничего менять.
+            </p>
+            <h3>Как я использую макбук</h3>
+            <p>
+                Вообще, мне пришла идея покупки легкого ноутбука после того, как я в очередной раз взял с собой свой ноутбук, который
+                весит порядка полутора-двух килограмм. Какое-то время назад я еще не был так сильно уверен в том, чтобы купить именно
+                макбук. Я просто желал себе легкое устройство, на котором мне будет удобно решать мои задачи.
+            </p>
+            <p>
+                Найти действительное достойное устройство на Windows у меня не получилось, да я и не искал так долго. В итоге выбор пал
+                на макбук и в итоге я купил его себе.
+            </p>
+            <p>
+                Как я и сказал выше, мне нужно было легкое устройство для программирования и прочих задач. Я часто отправляюсь в
+                «путешествие», мне не нужен ноутбук с 4090, мне достаточно просто хорошей техники, которой мне будет приятно
+                пользоваться.
+            </p>
+            <p>
+                Иногда я пользуюсь макбуком и дома. Например, печатаю на нем текст или произвожу некоторую работу на нем. У меня есть
+                ноутбук, который в качестве основного рабочего устройства, к которому я подключаю клавиатуру и пользуюсь внешним
+                монитором.
+            </p>
+            <h3>Заключение</h3>
+            <p>
+                Статья не имеет большой технической части, она направлена на ответ на вопрос «Для кого лучше всего подойдет макбук» и
+                «Стоит ли взять попробовать». Далеко не у каждого будут такие впечатление от покупки устройства, все зависит от самого
+                человека и его задачах.
+            </p>
+            <p>
+                Лично я абсолютно доволен пользоваться макбуком для программирования и прочих задачах. Могу рекомендовать!
             </p>
         </div>
 
