--- a/src/html/p/the-new-generation-of-the-iphone-xr-device/index.html
+++ b/src/html/p/the-new-generation-of-the-iphone-xr-device/index.html
@@ -13,12 +13,12 @@
     <main class="container post--font-size main--post">
 
         <div class="container--post post--start-1">
-            <h1>Новое поколение устройства - iPhone Xr</h1>
+            <h1>Новое поколение устройства — iPhone Xr</h1>
             <p class="post--start-p">История, как полюбил iPhone Xr</p>
         </div>
 
         <figure class="post--start-img text-center">
-            <img src="/img/posts/p002.jpg" class="img-fluid" alt="Телефон лежит на столе">
+            <img src="/img/posts/p007.jpg" class="img-fluid" alt="Телефон лежит на столе">
             <figcaption class="img--desc">Телефон лежит на столе</figcaption>
         </figure>
 
