--- a/src/parts/p--main.html
+++ b/src/parts/p--main.html
@@ -47,17 +47,17 @@
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/p/the-new-generation-of-the-iphone-xr-device" class="card card--link card--rounded border-0">
-                <img src="/img/placeholders/p-4.jpg" class="card-img" alt="...">
+                <img src="/img/posts/p007.jpg" class="card-img" alt="Телефон лежит на столе">
                 <div class="card-img-overlay card--bg-gradient d-flex">
-                    <p class="card-title text-white mt-auto card--title card--title-2">Новое поколение устройства - iPhone XR</p>
+                    <p class="card-title text-white mt-auto card--title card--title-2">Новое поколение устройства — iPhone XR</p>
                 </div>
             </a>
         </div>
         <div class="col pb-3 mb-sm-0">
             <a href="/p/macbook-pro-2014-13-review" class="card card--link card--rounded border-0">
-                <img src="/img/placeholders/p-4.jpg" class="card-img" alt="...">
+                <img src="/img/posts/p008.jpg" class="card-img" alt="Приоткрытая крышка ноутбука">
                 <div class="card-img-overlay card--bg-gradient d-flex">
-                    <p class="card-title text-white mt-auto card--title card--title-2">Macbook Pro 2014 13' - обзор</p>
+                    <p class="card-title text-white mt-auto card--title card--title-2">Macbook Pro 2014 13' — обзор</p>
                 </div>
             </a>
         </div>
